--- a/packages/component_library/pubspec.yaml
+++ b/packages/component_library/pubspec.yaml
@@ -9,8 +9,10 @@ dependencies:
   auto_size_text: ^3.0.0
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
   flutter_svg: ^2.0.17
-  intl: ^0.20.2
+  intl: any
 
 dev_dependencies:
   flutter_test:
@@ -20,6 +22,7 @@ dev_dependencies:
   test: ^1.25.15
 
 flutter:
+  generate: true
   assets:
     - assets/
   fonts:
