--- a/packages/fav_qs_api/pubspec.yaml
+++ b/packages/fav_qs_api/pubspec.yaml
@@ -8,8 +8,15 @@ environment:
 
 # Add regular dependencies here.
 dependencies:
+  dio: ^5.8.0+1
+  equatable: ^2.0.7
+  json_annotation: ^4.9.0
   # path: ^1.8.0
 
 dev_dependencies:
+  build_runner: ^2.4.15
+  http_mock_adapter: ^0.6.1
+  json_serializable: ^6.9.4
   lints: ^5.0.0
+  mockito: ^5.4.5
   test: ^1.24.0
