--- a/packages/fav_qs_api/pubspec.yaml
+++ b/packages/fav_qs_api/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
   dio: ^5.8.0+1
   equatable: ^2.0.7
   json_annotation: ^4.9.0
+  meta: ^1.16.0
   # path: ^1.8.0
 
 dev_dependencies:
