--- a/packages/key_value_storage/pubspec.yaml
+++ b/packages/key_value_storage/pubspec.yaml
@@ -8,6 +8,7 @@ environment:
 # Add regular dependencies here.
 dependencies:
   hive: ^2.2.3
+  meta: ^1.16.0
   path_provider: ^2.1.5
   # path: ^1.8.0
 
