--- a/packages/quote_repository/pubspec.yaml
+++ b/packages/quote_repository/pubspec.yaml
@@ -8,8 +8,16 @@ environment:
 
 # Add regular dependencies here.
 dependencies:
+  domain_models:
+    path: ../domain_models
+  equatable: ^2.0.7
+  fav_qs_api:
+    path: ../fav_qs_api
+  key_value_storage:
+    path: ../key_value_storage
   # path: ^1.8.0
 
 dev_dependencies:
   lints: ^5.0.0
+  mocktail: ^1.0.4
   test: ^1.24.0
