--- a/packages/user_repository/pubspec.yaml
+++ b/packages/user_repository/pubspec.yaml
@@ -8,8 +8,18 @@ environment:
 
 # Add regular dependencies here.
 dependencies:
+  rxdart: ^0.28.0
+  flutter_secure_storage: ^4.2.1
+  fav_qs_api:
+    path: ../fav_qs_api
+  key_value_storage:
+    path: ../key_value_storage
+  domain_models:
+    path: ../domain_models
   # path: ^1.8.0
 
 dev_dependencies:
+  build_runner: ^2.4.15
   lints: ^5.0.0
+  mockito: ^5.4.5
   test: ^1.24.0
