--- a/packages/features/sign_up/pubspec.yaml
+++ b/packages/features/sign_up/pubspec.yaml
@@ -8,6 +8,8 @@ environment:
   flutter: ">=1.17.0"
 
 dependencies:
+  component_library:
+    path: ../../component_library
   domain_models:
     path: ../../domain_models
   flutter:
@@ -23,6 +25,7 @@ dev_dependencies:
     sdk: flutter
   flutter_lints: ^5.0.0
   mocktail: ^1.0.4
+  build_runner: ^2.4.15
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
