--- a/packages/features/quote_list/pubspec.yaml
+++ b/packages/features/quote_list/pubspec.yaml
@@ -10,6 +10,20 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  equatable: ^2.0.7
+  flutter_bloc: ^9.0.0
+  bloc_concurrency: ^0.3.0
+  domain_models:
+    path: ../../domain_models
+  quote_repository:
+    path: ../../quote_repository
+  user_repository:
+    path: ../../user_repository
+  infinite_scroll_pagination: ^4.1.0
+  rxdart: ^0.28.0
+  intl: any
+  flutter_localizations:
+    sdk: flutter
 
 dev_dependencies:
   flutter_test:
