--- a/packages/features/quote_list/pubspec.yaml
+++ b/packages/features/quote_list/pubspec.yaml
@@ -24,6 +24,8 @@ dependencies:
   intl: any
   flutter_localizations:
     sdk: flutter
+  component_library:
+    path: ../../component_library
 
 dev_dependencies:
   flutter_test:
