Remove localization from quotes feature package

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,8 @@ dependencies:
     path: packages/key_value_storage
   # monitoring:
   #   path: packages/monitoring
+  quote_list:
+    path: packages/features/quote_list
   quote_repository:
     path: packages/quote_repository
   routemaster: ^1.0.1
