--- a/packages/features/quote_details/pubspec.yaml
+++ b/packages/features/quote_details/pubspec.yaml
@@ -1,7 +1,5 @@
 name: quote_details
-description: "A new Flutter package project."
 version: 0.0.1
-homepage:
 
 environment:
   sdk: ^3.7.0
@@ -10,6 +8,15 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  equatable: ^2.0.7
+  flutter_bloc: ^9.0.0
+  share_plus: ^10.1.4
+  quote_repository:
+    path: ../../quote_repository
+  domain_models:
+    path: ../../domain_models
+  component_library:
+    path: ../../component_library
 
 dev_dependencies:
   flutter_test:
