--- a/packages/features/sign_in/pubspec.yaml
+++ b/packages/features/sign_in/pubspec.yaml
@@ -10,6 +10,7 @@ dependencies:
     path: ../../component_library
   domain_models:
     path: ../../domain_models
+  equatable: ^2.0.7
   flutter:
     sdk: flutter
   flutter_bloc: ^9.0.0
